--- a/07-data-processing/02-pandas/03-indexing-slicing/solution.ipynb
+++ b/07-data-processing/02-pandas/03-indexing-slicing/solution.ipynb
@@ -36,12 +36,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indexing and Slicing:\n",
-      "Using label-based indexing:\n",
       "    Name  Salary\n",
       "3  David   70000\n",
-      "4   Emma   65000\n",
-      "\n"
+      "4   Emma   65000\n"
      ]
     }
    ],
@@ -59,11 +56,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using positional-based indexing:\n",
       "    Name  Salary\n",
       "3  David   70000\n",
-      "4   Emma   65000\n",
-      "\n"
+      "4   Emma   65000\n"
      ]
     }
    ],
@@ -81,7 +76,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Boolean indexing:\n",
       "      Name  Age      City  Salary\n",
       "1      Bob   30  New York   75000\n",
       "2  Charlie   35     Paris   80000\n",
