--- a/07-data-processing/02-pandas/02-dataframes/dataframes.ipynb
+++ b/07-data-processing/02-pandas/02-dataframes/dataframes.ipynb
@@ -23,8 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -36,21 +37,101 @@
     "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
     "}\n",
     "\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>London</td>\n",
+       "      <td>60000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City  Salary\n",
+       "0    Alice   25    London   60000\n",
+       "1      Bob   30  New York   75000\n",
+       "2  Charlie   35     Paris   80000\n",
+       "3    David   28     Paris   70000\n",
+       "4     Emma   32    Sydney   65000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creating a DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Displaying the DataFrame\n",
     "df"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,13 +142,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Name    5 non-null      object\n",
+      " 1   Age     5 non-null      int64 \n",
+      " 2   City    5 non-null      object\n",
+      " 3   Salary  5 non-null      int64 \n",
+      "dtypes: int64(2), object(2)\n",
+      "memory usage: 292.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
     "# Basic DataFrame Information\n",
     "df.info()"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,12 +177,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>70000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.807887</td>\n",
+       "      <td>7905.69415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>60000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>65000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>70000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>75000.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>80000.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Age       Salary\n",
+       "count   5.000000      5.00000\n",
+       "mean   30.000000  70000.00000\n",
+       "std     3.807887   7905.69415\n",
+       "min    25.000000  60000.00000\n",
+       "25%    28.000000  65000.00000\n",
+       "50%    30.000000  70000.00000\n",
+       "75%    32.000000  75000.00000\n",
+       "max    35.000000  80000.00000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.describe()"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,13 +280,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City  Salary\n",
+       "1      Bob   30  New York   75000\n",
+       "2  Charlie   35     Paris   80000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filtered_df = df[df['Salary'] > 70000]\n",
     "filtered_df"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,14 +354,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Experience</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25</td>\n",
+       "      <td>London</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>65000</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City  Salary  Experience\n",
+       "0    Alice   25    London   60000           3\n",
+       "1      Bob   30  New York   75000           5\n",
+       "2  Charlie   35     Paris   80000           7\n",
+       "3    David   28     Paris   70000           4\n",
+       "4     Emma   32    Sydney   65000           6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Experience'] = [3, 5, 7, 4, 6]\n",
     "\n",
     "df"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,13 +459,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "London      60000.0\n",
+       "New York    75000.0\n",
+       "Paris       75000.0\n",
+       "Sydney      65000.0\n",
+       "Name: Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avg_salary_by_city = df.groupby('City')['Salary'].mean()\n",
     "avg_salary_by_city"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,8 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
     "data = {\n",
     "    'EmployeeID': [101, 102, 103, 104, 105],\n",
@@ -184,8 +531,7 @@
     "    'Department': ['HR', 'IT', 'Finance', 'Marketing', 'Sales'],\n",
     "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
     "}"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
