--- a/07-data-processing/02-pandas/03-indexing-slicing/exercise.ipynb
+++ b/07-data-processing/02-pandas/03-indexing-slicing/exercise.ipynb
@@ -1,35 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d8279d9f-34de-4f79-b25b-029c958b3f50",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Indexing and slicing in Pandas:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pandas offers versatile indexing capabilities, allowing for both label-based and positional-based indexing. You can access individual elements using index labels or slices, similar to Python lists. Additionally, Pandas supports boolean indexing, where you can filter data based on conditional expressions, facilitating complex data selection operations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example Usage:"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "9fe31e8a-3fc4-4435-bb39-a041b5c37f5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Sample data\n",
     "data = {\n",
     "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Emma'],\n",
     "    'Age': [25, 30, 35, 28, 32],\n",
@@ -40,24 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "e5fbdffc-c8c8-44fa-9456-66d72838c8bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a DataFrame\n",
-    "df = pd.DataFrame(data)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**DataFrame Creation:** We create a Pandas DataFrame named 'df' from the provided dictionary 'data'. This DataFrame contains information about employees, including their names, ages, cities, and salaries."
+    "employees = pd.DataFrame(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "0a492716-56af-444f-904e-6463caeb0774",
    "metadata": {},
    "outputs": [
     {
@@ -136,121 +117,21 @@
        "4     Emma   32    Sydney   65000"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Displaying the DataFrame\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Displaying the DataFrame:** We print the DataFrame to visualize its contents. This helps us understand the structure of the data and verify that it has been loaded correctly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accessing data using index labels:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>30</td>\n",
-       "      <td>New York</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Paris</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>David</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Paris</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  Age      City\n",
-       "1      Bob   30  New York\n",
-       "2  Charlie   35     Paris\n",
-       "3    David   28     Paris"
-      ]
-     },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Indexing and Slicing\n",
-    "print(\"Accessing data using index labels:\")\n",
-    "df.loc[1:3, 'Name':'City']  # Using index labels for rows and columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Indexing and Slicing:** Using index labels (loc): We use the loc accessor to access rows and columns using their index labels. For example, df.loc[1:3, 'Name':'City'] selects rows 1 to 3 and columns 'Name' to 'City'."
+    "employees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "id": "1fd20e9e-4cec-4446-8329-65abeb407f7d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accessing data using integer positions:\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -273,147 +154,107 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>30</td>\n",
-       "      <td>New York</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Paris</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  Age      City\n",
-       "1      Bob   30  New York\n",
-       "2  Charlie   35     Paris"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"Accessing data using integer positions:\")\n",
-    "df.iloc[1:3, 0:3]  # Using integer positions for rows and columns\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We use the iloc accessor to access rows and columns using their integer positions. For example, df.iloc[1:3, 0:3] selects rows 1 to 2 and columns at integer positions 0 to 2."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Boolean indexing:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
        "      <th>Salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>30</td>\n",
-       "      <td>75000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>35</td>\n",
-       "      <td>80000</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>David</td>\n",
-       "      <td>28</td>\n",
        "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>65000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Name  Age  Salary\n",
-       "1      Bob   30   75000\n",
-       "2  Charlie   35   80000\n",
-       "3    David   28   70000"
+       "    Name  Salary\n",
+       "3  David   70000\n",
+       "4   Emma   65000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Boolean indexing:\")\n",
-    "df.loc[1:3, [True, True, False, True]]  # Using boolean values for rows and/or columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also use booleans when indexing to hide or show rows or columns."
+    "last_two = employees.index[-2:]\n",
+    "employees.loc[last_two, [\"Name\", \"Salary\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "id": "a623720f-d428-4b3c-9d76-a944f3612f46",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtering:\n"
-     ]
-    },
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Salary\n",
+       "3  David   70000\n",
+       "4   Emma   65000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees.iloc[-2:, [0, 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "513590b4-ffad-4ab8-9eb9-abbfe7d650dd",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -455,6 +296,13 @@
        "      <td>35</td>\n",
        "      <td>Paris</td>\n",
        "      <td>80000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>65000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,83 +311,106 @@
       "text/plain": [
        "      Name  Age      City  Salary\n",
        "1      Bob   30  New York   75000\n",
-       "2  Charlie   35     Paris   80000"
+       "2  Charlie   35     Paris   80000\n",
+       "4     Emma   32    Sydney   65000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Filtering:\")\n",
-    "df[df['Salary'] > 70000]  # Filtering data based on a condition"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We demonstrate filtering the DataFrame based on a condition. In this case, we select rows where the 'Salary' column has a value greater than 70000 using df[df['Salary'] > 70000]. This operation returns a DataFrame containing only the rows that meet the specified condition."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Assigment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this lab exercise, you will explore a dataset containing information about employees in a company using Pandas. You will perform various data manipulation and analysis tasks to gain insights into the employee data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Dataset:**\n",
-    "You are provided with a dictionary containing employee information:"
+    "employees.loc[0:, [True, True, True, True]][employees[\"Age\"] >= 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
+   "id": "cb2bc990-c033-43e9-9968-78f665a8c617",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>65000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City  Salary\n",
+       "1      Bob   30  New York   75000\n",
+       "2  Charlie   35     Paris   80000\n",
+       "4     Emma   32    Sydney   65000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sample data\n",
-    "data = {\n",
-    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Emma'],\n",
-    "    'Age': [25, 30, 35, 28, 32],\n",
-    "    'City': ['London', 'New York', 'Paris', 'Paris', 'Sydney'],\n",
-    "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
-    "}"
+    "employees[employees[\"Age\"] >= 30]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cabb2f3-e25c-4d53-ad99-5d98e3799139",
    "metadata": {},
-   "source": [
-    "## Tasks:\n",
-    "\n",
-    "**DataFrame Creation:**\n",
-    "- Create a Pandas DataFrame named 'employees' from the provided dictionary 'data'.\n",
-    "\n",
-    "**Indexing and Slicing:**\n",
-    "- Access the last 2 rows and the 'Name' and 'Salary' columns using both label-based and positional-based indexing.\n",
-    "- Extract the data for employees with indices 0 to 2 and all columns using integer-based indexing.\n",
-    "**Boolean Indexing:**\n",
-    "- Filter the data to include only employees aged 30 or above."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -554,9 +425,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
