--- a/07-data-processing/02-pandas/04-operations-methods/operations-methods.ipynb
+++ b/07-data-processing/02-pandas/04-operations-methods/operations-methods.ipynb
@@ -333,59 +333,59 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>40</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>40</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   A  B   C  A  B   C\n",
-       "0  1  5  10  1  5  10\n",
-       "1  2  4  20  2  4  20\n",
-       "2  3  3  30  3  3  30\n",
-       "3  4  2  40  4  2  40\n",
-       "4  5  1  50  5  1  50"
+       "   A    B     C  A    B     C\n",
+       "0  1  5.0  10.0  1  5.0  10.0\n",
+       "1  2  4.0  20.0  2  4.0  20.0\n",
+       "2  3  NaN  30.0  3  NaN  30.0\n",
+       "3  4  2.0   NaN  4  2.0   NaN\n",
+       "4  5  1.0  50.0  5  1.0  50.0"
       ]
      },
      "execution_count": 10,
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "4  5  1.0  50.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "4  5  1.0  50.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "4  5  1.0  50.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
